# nautobot-spare-parts

./: .gitignore  COMPATIBILITY.md  LICENSE  PLUGIN_DOCUMENTATION.md  README.md  VERSION_TESTING.md  pyproject.toml  setup.py
nautobot_spare_parts/: __init__.py  filters.py  forms.py  models.py  navigation.py  signals.py  tables.py  template_content.py  urls.py  utils.py  views.py
nautobot_spare_parts/api/: __init__.py  serializers.py  urls.py  views.py
nautobot_spare_parts/migrations/: 0001_initial.py  __init__.py
nautobot_spare_parts/templates/nautobot_spare_parts/: low_stock_dashboard.html  sparepartinventory_checkin.html  sparepartinventory_checkout.html  sparepartinventory_retrieve.html
