[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "nautobot-spare-parts"
version = "1.0.0"
description = "Nautobot plugin for tracking spare parts inventory across datacenter locations"
authors = ["Your Name <your.email@example.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/yourusername/nautobot-spare-parts"
repository = "https://github.com/yourusername/nautobot-spare-parts"
keywords = ["nautobot", "nautobot-plugin", "inventory", "spare-parts"]
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
packages = [
    { include = "nautobot_spare_parts" },
]

[tool.poetry.dependencies]
python = "^3.8"
nautobot = ">=2.0.0,<4.0.0"
packaging = ">=20.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
black = "^23.0"
flake8 = "^6.0"

[tool.poetry.plugins."nautobot.apps"]
"nautobot_spare_parts" = "nautobot_spare_parts:NautobotSparePartsConfig"

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.tox
  | \.venv
  | _build
  | build
  | dist
  | migrations
)/
'''
